--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,11 +41,12 @@ jobs:
           git config user.email "bot@example.com"
 
       - name: Version
+        if: ${{ github.event_name != 'workflow_dispatch' }}
         run: |
           set -ex
 
           pnpm i
-          pnpm exec changeset version ${{ github.ref_name == 'main' && '--snapshot' || '' }}
+          pnpm exec changeset version ${{ github.ref_name == 'main' && '--snapshot dev --no-git-tag' || '' }}
 
       - name: Publish
         uses: changesets/action@v1
@@ -53,12 +54,3 @@ jobs:
           publish: pnpm exec changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      #- name: 📸 Snapshot and Publish
-      #  run: |
-      #    # [Snapshot release fails if repository is in pre-release mode](https://github.com/changesets/changesets/issues/1195)
-      #    rm -f .changeset/pre.json
-      #    # Add empty changeset so we always have a new snapshot release for each new run
-      #    pnpm exec changeset add --empty
-      #    pnpm exec changeset version --snapshot
-      #    pnpm exec changeset publish --tag snapshot
